2010-11-11  Chang Shu  <chang.shu@nokia.com>

Reviewed by Antonio Gomes.

        [GTK] Unskip tests that are passing now.
        fast/events/spatial-navigation/snav-input.html
        fast/events/spatial-navigation/snav-textarea.html
        https://bugs.webkit.org/show_bug.cgi?id=49056

        * platform/gtk/Skipped:
2010-11-11  Chang Shu  <chang.shu@nokia.com>

        Reviewed by Antonio Gomes.

        [GTK] Replace "MoveForward"/"MoveBackward" with "MoveRight"/"MoveLeft"
        to make spatial navigation work on input/textarea.
        https://bugs.webkit.org/show_bug.cgi?id=49056

        * WebCoreSupport/EditorClientGtk.cpp:
        (WebKit::moveCursorCallback):

Canonical link: https://commits.webkit.org/62357@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71881 268f45cc-cd09-0410-ab3c-d52691b4dbfc